jenkins-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  jenkins
  namespace: jenkins
  labels:
    app:  jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  jenkins
    spec:
      hostname: jenkins
      serviceAccountName: jenkins
      containers:
      - name:  jenkins
        image:  bjgomes/jenkins:latest
        imagePullPolicy: Always
        ports:
        - containerPort:  8080
          name:  jenkins
        - containerPort:  50000
          name:  jnlp
        volumeMounts:
        - name: jenkins
          mountPath: /var/jenkins_home
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: jenkins
          persistentVolumeClaim:
            claimName: jenkins

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-np
  namespace: jenkins
spec:
  selector:
    app: jenkins
  type: NodePort
  ports:
  - name: jenkins
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: jnlp
    protocol: TCP
    port: 50000
    targetPort: 50000
