gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: jenkins
  name: gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: tcp
      protocol: tcp
    hosts:
    - jenkins-np.jenkins.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: jenkins
  name: jenkins
spec:
  hosts:
  - jenkins-np.jenkins.svc.cluster.local
  gateways:
  - gateway
  tcp:
  - match:
    - port: 8080
    route:
    - destination:
        host: jenkins-np.jenkins.svc.cluster.local
        port:
          number: 8080
